--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
             path "CMakeLists.txt"
         }
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 dependencies {
@@ -41,4 +44,5 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-maps:11.0.0'
     compile 'com.google.android.gms:play-services-location:11.0.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
