--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.samsung.android.provider.filterprovider.permission.READ_FILTER" />
-    <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY" />
 
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
@@ -33,12 +31,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDHEf4YRXsF4V1xsl-eezoeiqwtYV_oqlY"/>
 
-        <activity android:name=".MainActivity"
-            android:hardwareAccelerated="true"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".SensitivityTestActivity"
             android:theme="@style/AppTheme.Dialog"/>
         <activity android:name=".StandardActivity"
