--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:theme="@style/AppTheme.Dialog"/>
         <activity android:name=".RecordDrive"/>
         <activity android:name=".Setting"/>
+        <activity android:name=".Manual_Recording"/>
         <activity android:name=".Warning"/>
 
         <activity android:name=".SplashActivity"
